# panel

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  UPDATE_LOG.md  docker-compose.yml  entrypoint.sh  public
node/: Cargo.toml  build.rs
node/src/: grpc.rs  main.rs  models.rs  state.rs  tasks.rs
node/src/handlers/: auth.rs  docker.rs  mod.rs  update.rs
panel/: Cargo.toml
panel/public/: OFL.txt
panel/public/assets/css/: auth.css  login.css  style.css
panel/public/assets/js/: console.js  server-controls.js  utils.js
panel/src/: grpc.rs  main.rs  models.rs  state.rs
panel/src/handlers/: allocations.rs  api.rs  auth.rs  dashboard.rs  logs.rs  mod.rs  nodes.rs  overview.rs  scripts.rs  servers.rs
panel/src/http/handlers/: allocations.rs  api.rs  auth.rs  dashboard.rs  logs.rs  mod.rs  nodes.rs  overview.rs  runtimes.rs  scripts.rs  servers.rs
panel/templates/: auth_layout.html  image_create.html  image_edit.html  layout.html  login.html  logs.html  node_allocations.html  node_create.html  node_edit.html  node_setup.html  nodes.html  overview.html  overview_stats.html  runtime_create.html  runtime_edit.html  runtimes.html  server_create.html  server_edit.html  server_manage.html  servers.html
proto/: node.proto
update_logs/: 0.1.2-dev.md  0.1.3-dev.md  0.1.4-dev.md
