[package]
name = "node"
version = "0.2.0-dev"
edition = "2024"

[dependencies]
axum = { version = "0.8.8" }
bollard = "0.19.4"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["validate-request", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }
tonic = { version = "0.12", features = ["tls"] }
tonic-web = "0.12"
prost = "0.13"
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
