[package]
name = "panel"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
axum = "0.8.8"
base64 = "0.22.1"
bcrypt = "0.17.1"
dotenv = "0.15.0"
rand = "0.9.2"
redis = { version = "1.0.2", features = ["tokio-comp"] }
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
uuid = { version = "1.19.0", features = ["v4"] }
