[package]
name = "panel"
version = "0.1.4-dev"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
askama = "0.15.1"
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
base64 = "0.22.1"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
rand = { version = "0.9.2", features = ["std", "std_rng"] }
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34-deprecated"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
